--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     },
     "autoload" : {
         "psr-4" : {
-            "CosmoQuestX\\" : "csb/"
+            "Unnamed\\" : "csb/",
+            "CosmoQuestX\\" : "src/"
         }
     },
     "autoload-dev" : {
